--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <h1>Welcome to the first page</h1>
+        <h2>heres a list of daily coding challenges</h2>
+        <ul>
+            <li><a src="coding-challenge-1/index.html">coding challenge 1</a></li>
+        </ul>
         <script></script>
     </body>
 </html>
