--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>heres a list of daily coding challenges</h2>
         <ul>
             <li><a href="coding-challenge-1/index.html">coding challenge 1</a></li>
+            <li><a href="coding-challenge-2/index.html">coding challenge 2</a></li>
         </ul>
         <script></script>
     </body>
