--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="coding-challenge-1/index.html">coding challenge 1</a></li>
             <li><a href="coding-challenge-2/index.html">coding challenge 2</a></li>
+            <li><a href="coding-challenge-3/index.html">coding challenge 3</a></li>
         </ul>
         <script></script>
     </body>
