coding challenge 4 update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="coding-challenge-1/index.html">coding challenge 1</a></li>
             <li><a href="coding-challenge-2/index.html">coding challenge 2</a></li>
             <li><a href="coding-challenge-3/index.html">coding challenge 3</a></li>
+            <li><a href="coding-challenge-4/index.html">coding challenge 4</a></li>
         </ul>
         <script></script>
     </body>
