--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="coding-challenge-3/index.html">coding challenge 3</a></li>
             <li><a href="coding-challenge-4/index.html">coding challenge 4</a></li>
             <li><a href="coding-challenge-5/index.html">coding challenge 5</a></li>
+            <li><a href="coding-challenge-6/index.html">coding challenge 6</a></li>
         </ul>
         <script></script>
     </body>
