coding-challenge 7 update

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="coding-challenge-4/index.html">coding challenge 4</a></li>
             <li><a href="coding-challenge-5/index.html">coding challenge 5</a></li>
             <li><a href="coding-challenge-6/index.html">coding challenge 6</a></li>
+            <li><a href="coding-challenge-7/index.html">coding challenge 7</a></li>
         </ul>
         <script></script>
     </body>
