coding challenge 8 update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>opening page</title>
         <meta name="keywords" content="coding challenges home page">
         <meta name="description" content="just a place to post daily warm up challenges and to flatten the forgetting curve">
-        <meta name="viewport" content="width=device-width,intial-scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
     </head>
     <body>
         <h1>Welcome to the first page</h1>
@@ -17,6 +17,7 @@
             <li><a href="coding-challenge-5/index.html">coding challenge 5</a></li>
             <li><a href="coding-challenge-6/index.html">coding challenge 6</a></li>
             <li><a href="coding-challenge-7/index.html">coding challenge 7</a></li>
+            <li><a href="coding-challenge-8/index.html">coding challenge </a></li>
         </ul>
         <script></script>
     </body>
