coding challenge 9 update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <li><a href="coding-challenge-5/index.html">coding challenge 5</a></li>
             <li><a href="coding-challenge-6/index.html">coding challenge 6</a></li>
             <li><a href="coding-challenge-7/index.html">coding challenge 7</a></li>
-            <li><a href="coding-challenge-8/index.html">coding challenge </a></li>
+            <li><a href="coding-challenge-8/index.html">coding challenge 8</a></li>
+            <li><a href="coding-challenge-9/index.html">coding challenge 9</a></li>
+
         </ul>
         <script></script>
     </body>
