coding-challenge-10 update

--- a/coding-challenge-9/index.html
+++ b/coding-challenge-9/index.html
@@ -23,7 +23,8 @@
     <h2>Developer Notes</h2>
     <p>God these are starting to kill me, but I feel I am getting more adept at navigating multiple for-loops and if statements, and slowly i parse out multiple ideas that don't work until I arrive at the best 1, which ironically is almost always less complicated than I think, Jeez.
         the tricky bit with this whole exercise is that i needed to find a way to evaluate if the braces are nested in a logical way. i arrived at the best answer being to simply constantly remove the adjacent matching braces constanly until there were no more matching braces left.
-        At this point, if there are any braces left in the string, i'll know that it is improperly nested fo-sho'.
+        At this point, if there are any braces left in the string, i'll know that it is improperly nested fo-sho'.<br>
+        a particularly cheeky solution that I would have preferred to implement, is if I had 2 js scripts to run: I would insert the test value directly into the code of the other js file, then set an event Listener to the original js file that can listen for a syntax error in the other document. if the brace syntax is incorrect, it will cause the entire document to crash<br>
         <br>my best practice of the code manifests this same method but much more eloquently. I set a while loop to run if the text input contained any of the adjacent matching braces and then used the replace() method to alter the string to replace any matching pair with (""). it will run for multiple rounds until no pairs exist in the string.
         then i simply ask the script to return the statement that the length of the string is 0. if it is, it gives me true, if it isn't then its false. this works because a length of 0 is the only way a valid string of braces would be processed in the while Loop.
     </p>
