--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <li><a href="coding-challenge-7/index.html">coding challenge 7</a></li>
             <li><a href="coding-challenge-8/index.html">coding challenge 8</a></li>
             <li><a href="coding-challenge-9/index.html">coding challenge 9</a></li>
+            <li><a href="coding-challenge-10/index.html">coding challenge 10</a></li>
+
 
         </ul>
         <script></script>
