--- a/coding-challenge-11/index.html
+++ b/coding-challenge-11/index.html
@@ -11,6 +11,8 @@
             Can Vasya sell a ticket to every person and give change if he initially has no money and sells the tickets strictly in the order people queue?
             
             Return YES, if Vasya can sell a ticket to every person and give change with the bills he has at hand at that moment. Otherwise return NO.
+
+            use tickets(arrayofpeople) eh. tickets([25,25,25,50,25,100,50,50,25])
         </p>
         <h2>Developer notes</h2>
         <p>much like the last few challenges, i use array manipulation to keep track of the money in the register and then arranged them from largest to smallest, and cycled through them to see if a combo existed to repay the change. if not, the while loop is broken, peopleInLine will not equal to 0 and we will receive a false statement</p>
