coding challenge 12 update

--- a/coding-challenge-10/index.html
+++ b/coding-challenge-10/index.html
@@ -7,11 +7,8 @@
 <body>
   <h1>Coding Challenge 10: JS-30 day-2 freestyle</h1>
   <p>my challenge today was to switch it up with a bit more of a creative venture. so i did the day 2 js clock from js30 but i coded it my own way as well as really added my own sort of beach day flavor to the plain clock</p>
-  <p>the thought started with me wondering how i could express a minimalist clocks with varying circles representing the hands isntead of the traditional arms, and that eventually lead to this pool theme with different swimmers in tubes as different arms of the clock</p>
-  <p>fun project, but i kept the arms in place, because when the different swimmers r in different spots, and facing differnt directions it can be a little disorienting when you're just trying to read a watch.</p>
-  <p>I could easily circumvent this by perhaps photoshopping in either a beachball with sun glare or perhaps a pool drain to represent the origin of the watch and thereby give users the point of reference to read the time without sacrificng style of a handless watch</p>
-  <p>there is some quality of life changes i made to the original project's code that I think would lead to a more reliable clock</p>
-  <p>be aware that the js is actually written directly into the html for this project</p>
+  <p>added a beachball to the center, because without it, it is disorienting trying to read it as a watch as the swimmers don't face the same directions. so having that origin for reference add some necessary visual data that makes the face more eaily readable while maintaining no jutting clock arms</p>
+  <p>possible improvements: add slowly shifting proportional size to represent change in depth as waves come in and out, and slow asynchronous spinning and non-uniform translation as they revolve around the origin...however that would probably make the clock much more unreadable...but much more like a pool haha</p>
 
 
     <div class="clock">
