--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="coding-challenge-9/index.html">coding challenge 9</a></li>
             <li><a href="coding-challenge-10/index.html">coding challenge 10</a></li>
             <li><a href="coding-challenge-11/index.html">coding challenge 11</a></li>
+            <li><a href="coding-challenge-12/index.html">coding challenge 12</a></li>
 
         </ul>
         <script></script>
