coding challenge 16 update

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="coding-challenge-13/index.html">coding challenge 13</a></li>
             <li><a href="coding-challenge-14/index.html">coding challenge 14</a></li>
             <li><a href="coding-challenge-15/index.html">coding challenge 15</a></li>
+            <li><a href="coding-challenge-16/index.html">coding challenge 16</a></li>
 
         </ul>
         <script></script>
