--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li><a href="coding-challenge-14/index.html">coding challenge 14</a></li>
             <li><a href="coding-challenge-15/index.html">coding challenge 15</a></li>
             <li><a href="coding-challenge-16/index.html">coding challenge 16</a></li>
+            <li><a href="coding-challenge-17/index.html">coding challenge 17</a></li>
+            <li><a href="coding-challenge-18/index.html">coding challenge 18</a></li>
+            <li><a href="coding-challenge-19/index.html">coding challenge 19</a></li>
 
         </ul>
         <script></script>
